--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-data/
+data/dublin
+data/wikitables
 
 exp1/embeddings/wikitables/*
+
+.DS_STORE
+.DS_Store
+.DS_Store
+/exp2/.DS_Store
+
+__MACOSX
+
+trec_eval
